<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btn_covertImagesToPdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_to_pdf"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bottomToolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomToolbar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_selectImages"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:text="@string/image_select"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_setting"
            />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_selectImages"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>