<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    android:padding="@dimen/_3sdp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/ic_baseline_error_24"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@android:color/black"
        android:text="@string/error_message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:id="@+id/_gotIt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/ok"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:background="@drawable/ok_button_bg"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>